@@ -116,8 +116,8 @@ public class MetricsUtils {
     public static double jsd(int[] h1, int[] h2) {
         double sum = 0d;
         for (int i = 0; i < h1.length; i++) {
-            sum += h1[i] > 0 ? h1[i] * Math.log(2d * h1[i] / (h1[i] + h2[i])) : 0 +
-                    h2[i] > 0 ? h2[i] * Math.log(2d * h2[i] / (h1[i] + h2[i])) : 0;
+            sum += (h1[i] > 0 ? h1[i] * Math.log(2d * h1[i] / (h1[i] + h2[i])) : 0) +
+                    (h2[i] > 0 ? h2[i] * Math.log(2d * h2[i] / (h1[i] + h2[i])) : 0);
         }
         return sum;
     }
